# ohcount

./: .gitignore  CMakeLists.txt  README  README.md  setup.py
python/: __init__.py  setup.py
python/ohcount/: __init__.py
ruby/: ohcount.i  print_arch
src/: languages.h  sourcefile.c
src/hash/: extensions.gperf  languages.gperf  parsers.gperf
src/parsers/: corba_idl.rl
test/detect_files/: nsISupports.idl
test/expected_dir/: nsISupports.idl
test/unit/python/: python_test.py
